# api-cplusplus

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  README_CN.md  makefile  makefile.win32  meson.build  runCppTesting.sh
cmake/: FindLibUUID.cmake
demo/: CMakeLists.txt  README.md
demo/src/: DemoStreamReplicator.cpp  main.cpp
example/: README_CN.md
example/DFSWriting/: DFSWriting  Makefile  createDB.dos  dfsWriting.cpp
example/DFSWritingWithMultiThread/: CreateDatabase.dos  Makefile  MultiThreadDfsWriting  createDatabase.dos  multiThreadDfsWriting.cpp
example/streamingData/: CreateStreamingTable.dos  Makefile  StreamingDataWriting  StreamingDataWriting.cpp  StreamingThreadedClientSubscriber  StreamingThreadedClientSubscriber.cpp  createStreamingTable.dos
include/: AsynWorker.h  BatchTableWriter.h  Compress.h  Concurrent.h  Constant.h  ConstantFactory.h  ConstantImp.h  ConstantMarshall.h  DBConnectionPoolImpl.h  DFSChunkMeta.h  Dictionary.h  DictionaryImp.h  DolphinDB.h  DolphinDBImp.h  Domain.h  DomainImp.h  EmbeddedMediaDriver.h  ErrorCodeInfo.h  EventHandler.h  Exceptions.h  Exports.h  FixSTL.h  Format.h  Guid.h  LZ4.h  Logger.h  Matrix.h  MulticastStreaming.h  MultithreadedTableWriter.h  Platform.h  ResultSet.h  ScalarImp.h  Set.h  SetImp.h  SharedMem.h  SmartPointer.h  StreamReplicator.h  Streaming.h  StreamingUtil.h  SymbolBase.h  (+9 more)
include/absl/: int128.h
include/absl/base/: policy_checks.h
include/absl/numeric/: int128.h
include/googletest/: CMakeLists.txt
include/internal/: Crypto.h  Decimal.h  EmbeddedMediaDriver.h  WideInteger.h
simpleTest/: simpleTest.sh  simpleTestCase.txt  test.md
src/: AsynWorker.cpp  BatchTableWriter.cpp  BatchTableWriter.h  CMakeLists.txt  Compress.cpp  Compress.h  Concurrent.cpp  Concurrent.h  ConstantFactory.h  ConstantImp.cpp  ConstantImp.h  ConstantMarshall.cpp  ConstantMarshall.h  Crypto.cpp  DBConnectionPoolImpl.cpp  DFSChunkMeta.cpp  DictionaryImp.cpp  DictionaryImp.h  DolphinDB.cpp  DolphinDB.h  DolphinDBImp.cpp  DomainImp.cpp  EventHandler.cpp  Exceptions.cpp  Exceptions.h  Format.cpp  Format.h  Guid.cpp  LZ4.cpp  Logger.cpp  Matrix.cpp  MultithreadedTableWriter.cpp  MultithreadedTableWriter.h  ScalarImp.cpp  ScalarImp.h  SetImp.cpp  SetImp.h  SharedMem.cpp  SmartPointer.h  StreamReplicator.cpp  (+16 more)
src/platform/: Linux.cpp  Windows.cpp
test/: ArrayVectorTest_gtest.cpp  AutoFitTableAppenderTest_gtest.cpp  AutoFitTableUpsertTest_gtest.cpp  BatchTableWriter_gtest.cpp  CEPEventTest_gtest.cpp  CMakeLists.txt  CompressTest_gtest.cpp  ConcurrentTest_gtest.cpp  ConstantMarshall_gtest.cpp  DBConnectHighAvailableTest.cpp  DBConnectHighAvailableTest_gtest.cpp  DBConnectReconnectTest_gtest.cpp  DBConnectionTest_gtest.cpp  DLoggerTest_gtest.cpp  DataformDictionaryTest_gtest.cpp  DataformMatrixTest_gtest.cpp  DataformPairTest_gtest.cpp  DataformSetTest_gtest.cpp  DataformTableTest_gtest.cpp  DataformVectorTest_gtest.cpp  DolphinDBTest.cpp  DolphinDBTestINDEX_MAX.cpp  DolphinDBTestINDEX_MAX.h  DolphinDBTestINDEX_MAX_gtest.cpp  DolphinDBTest_gtest.cpp  DolphinDBTester.cpp  DolphinDBTester_gtest.cpp  ExceptionTest_gtest.cpp  FunctionTest_gtest.cpp  HightlyConcurrentConnTest.cpp  HightlyConcurrentConnTest_gtest.cpp  IPCinMemoryTableTest_gtest.cpp  Makefile  Makefile_win  MemoryLeakTest.cpp  MultithreadedTableWriterNew_gtest.cpp  MultithreadedTableWriter_gtest.cpp  PartitionedTableAppenderTest_gtest.cpp  ScalarTest_gtest.cpp  SqlTest_gtest.cpp  (+37 more)
test/.dockerfile/linux_x86_64/: Dockerfile
test/HA_testing/: HighAvailableTest_gtest.cpp
test/PersistStreamingExecutor/: DeserilizerstreamTable_subscribe_runner.py  HAstreamTable_subscribe_runner.py  NormalstreamTable_subscribe_runner.py  README.MD  startSubscribe.sh  stopSubscribe.sh
test/PersistStreamingExecutor/src/: demo.h  demo7.cpp  demo8_HA.cpp  demo9_d.cpp
test/concurrent_testing/: ConcurrentTest_gtest.cpp
unittest/: CMakeLists.txt  unittest.cpp
